# nest-server

./: .dockerignore  .gitignore  API.md  Cargo.toml  Dockerfile  Hosting.md  README.md  Repository.toml  Rocket.toml  packages.toml
front/: .editorconfig  .env.beta  .env.local  .env.stable  .env.unstable  .eslintignore  .eslintrc.js  README.md  package-lock.json  package.json
front/public/: index.html
front/public/css/: style.css
front/src/: app.vue  main.js  router.js
front/src/views/: 404.vue  details.vue  home.vue
front/static/css/: style.css
front/static/js/: main.js
front/templates/includes/: footer.hbs
front/templates/includes/header/: header.hbs  navbar.hbs  searchbar.hbs
front/templates/includes/snippet/: title.hbs  versiondata.hbs
front/templates/layouts/: base.hbs  search.hbs
front/templates/pages/: error.hbs  home.hbs
front/templates/pages/package/: content.hbs  metadata.hbs  versions.hbs
front/templates/pages/search/: content.hbs  metadata.hbs
src/: config.rs  filename.rs  main.rs  manifest.rs  package.rs  param.rs
src/api/: auth.rs  home.rs  mod.rs  pull.rs  search.rs  upload.rs
src/api/package/: content.rs  delete.rs  download.rs  hash.rs  metadata.rs  mod.rs  version.rs
src/front/: error.rs  hb.rs  home.rs  mod.rs  search.rs
src/front/package/: content.rs  metadata.rs  mod.rs  versions.rs
src/package/: history.rs  mod.rs  notify.rs
src/routes/: download.rs  index.rs  info.rs  metadata.rs  mod.rs  pull.rs  search.rs
src/tests/: mod.rs  tests_download.rs  tests_global.rs  tests_metadata.rs  tests_pull.rs  tests_search.rs
templates/: index.html.hbs
test-raven-os-org/kernel/linux/4.15.3/: manifest.toml
test-raven-os-org/sys-lib/libc/2.27.0/: manifest.toml
test-raven-os-org/sys-lib/linux-headers/4.15.3/: manifest.toml
test-raven-os-org/virtual/essentials/0.0.1/: manifest.toml
