[package]
name = "nest-server"
version = "0.1.0"
authors = ["Benjamin Grange <benjamin.grange@epitech.eu>", "Melvin PERSONNIER <melvin.personnier@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.3.16"
rocket_codegen = "0.3.16"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
lazy_static = "1.0"
failure = "0.1.1"
toml = "0.4.6"
glob = "0.2.11"
dotenv = "0.9.0"
rocket_cors = "0.3.0"
chrono = { version = "0.4", features = ["serde"] }

[dependencies.semver]
version = "0.9.0"
features = ["serde"]

[dependencies.rocket_contrib]
version = "0.3.16"
default-features = false
features = ["json"]
