[package]
name = "nest-server"
version = "0.1.0"
authors = ["Benjamin Grange <benjamin.grange@epitech.eu>", "Melvin PERSONNIER <melvin.personnier@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
rocket_cors = "0.4.0"
serde_json = "1.0.39"
lazy_static = "1.3.0"
failure = "0.1.1"
toml = "0.4.6"
glob = "0.2.11"
timeago = "0.1.5"
rand = "0.6.5"
tar = "0.4.22"
flate2 = "1.0.7"
notify = "4.0.10"
syn = "0.15.33"
quote = "0.6.12"
sha2 = "0.8.0"
data-encoding = "2.1.2"

[dependencies.libnest]
git = "https://github.com/raven-os/nest"

[dependencies.serde]
version = "1.0.90"
features = ["derive"]

[dependencies.chrono]
version = "0.4.6"
features = ["serde"]

[dependencies.semver]
version = "0.9.0"
features = ["serde"]

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["serve", "handlebars_templates", "json"]
